fix - categories left aligned

--- a/style/sass/_content.scss
+++ b/style/sass/_content.scss
@@ -69,6 +69,9 @@ body {
                 
                 .categoryname {
                     a {
+                        text-align: left;
+                        padding-left: 5px;
+                        
                         .fa {
                             font-size: 100%;
                             width: auto;
